--- a/problematizacao.html
+++ b/problematizacao.html
@@ -8,16 +8,16 @@
 
  <body>
 
-      <h1 class="titulo-centralizado">OBJETIVO DO PROJETO AGRICULTURA SUSTENTÁVEL</h1>
+     <h1 class="titulo-centralizado">Objetivo do Projeto Agricultura Sustentável</h1>
      
-    	<p class="objetivo"> O objetivo desse site é a princípio desenvolver no Colégio Julia Wanderley, o Projeto Agricultura Sustentável. Num primeiro momento apresentaria os benefícíos desse tipo de alimentação e propor ao colégio a possibildiade e viabilidade de fazermos uma horta sustentável, onde beneficiaria no primeiro momento, as pessoas envolvidas no projetos, os alunos e professoresos.</p> 
+    	<p class="objetivo"> O objetivo desse site é desenvolver no Colégio Julia Wanderley, o Projeto Agricultura Sustentável. Num primeiro momento, apresentaria o projeto a instituição e seus benefícíos futuros. Posteriormente, propor ao colégio a possibildiade e viabilidade de fazermos uma horta sustentável, no primeiro momento suprir internamente para nossa refeição.</p> 
 
-      <h2 class="titulo-centralizado">Mão na massa</h2>  
+     <h2 class="titulo-centralizado">Mão na massa</h2>  
 
-      <p class="objetivo">No primeiro momento, desenvolver o projeto para montarmos a horta, determinando o local, os tipos de verduras e hortaliças que poderiam ser cultivadas naquele local. Essa prática se daria durante as aulas de Geografia, Ciências e outras afins, onde os próprios alunos desenvolveria esse projeto juntamente com os professores das disciplinas envolvidas. </p>
-      <p class="objetivo">Ao final, teríamos estudado e aprendido várias técnicas de manejo, de cuidados com o solo, de irrigação e adubação orgâniza. Ao longo do ano, teríamos nossa própria horta no colégio e beneficiaria a comunidade local</p>
+     <p class="objetivo">A primeira estapa seria desenvolver o projeto para montarmos uma horta, determinando o local, os tipos de verduras e hortaliças que poderiam ser cultivadas naquele local. A segunda estapa, seria a mão na massa, a prática durante as aulas de Geografia, Ciências e outras afins, onde os próprios alunos, desenvolveriam todas as etapas do projeto juntamente com os professores das disciplinas envolvidas. </p>
+     <p class="objetivo">Ao final, teríamos estudado e aprendido várias técnicas de manejo, de cuidados com o solo, de irrigação e adubação orgâniza. Ao longo do ano, teríamos nossa própria horta no colégio beneficiando a comunidade local.</p>
 
- 		<img src="horta.jpg">
+ 	<img id="horta" src="horta.jpg">
  	</p>
 
  </body>
